--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -1,13 +1,29 @@
+
 * {
-    margin: 0;
+    margin: auto;
     border: 0;
 }
 
+hr {
+    border-bottom: 1px solid gainsboro;
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+hr:nth-of-type(2){
+    margin-top:100px;
+}
+
+$Primary-Color: white;
+$Secondary-Color: rgb(50, 50, 50);
+$Text-Color: white; //#3d4252
+$Clickable-Color: rgb(139, 50, 50);
+
 body {
+    overflow-x: hidden;
     background-color: white;
     font-family: sans-serif;
     header {
-        background-color: white;
+        background-color: $Secondary-Color;
         position: sticky;
         top: 0;
         padding: 0;
@@ -15,53 +31,84 @@ body {
         text-align: center;
         display: grid;
         z-index: 1;
-
         h1 {
-            color: #3d4252;
+            color: $Text-Color;
             font-size: 32pt;
             align-self: center;
         }
     }
-
+    
     section {
-        height: 500px;
-        padding: 0 5vw 0 5vw;
-        background-color: #3d4252;
+        height: 60vw;
+        min-height: 350px;
+        padding: 0vw 5vw 0vw 5vw;
+        width: 85vw;
+        background-color: $Primary-Color;
+        div {
+            padding: 1vh 3vw 1vh 3vw;
+            height: 60vw;
+            min-height: 400px;
+            h2 {
+                margin-top: 2vh;
+            }
+            a {
+                color: $Clickable-Color;
+                text-decoration: none;
+            }
+        }
     }
-
+    
     section:first-of-type {
-        h1 {
-            position: absolute;
-            left: 370px;
-            top: 150px;
-            padding: 20px;
+        height: 50vw;
+        max-height: 400px;
+        
+        img {
+            width: 35vw;
+            max-width: 250px;
+            float: left;
+            margin-right: 25px;
+            margin-bottom: 25px;
         }
 
+        h1 {
+            margin-top: 5vh;
+            display: inline-block;
+        }
+        
         button {
             font-size: 100%;
             font-family: inherit;
             border: 0;
-            padding: 0;
-            background-color: inherit;
-            position: absolute;
-            left: 70vw;
-            top: 450px;
-        }
-
-        img {
-            position: absolute;
-            top: 150px;
-            left: 40px;
+            color: white;
+            background-color: $Clickable-Color;
+            text-align: center;
+            width: 90vw;
+            height: 50px;
+            //float: right;
         }
     }
 
     section:nth-of-type(2) {
-        background-color: #333545;
+        img {
+            width: 90%;
+        }
     }
-
+    
+    section:last-of-type {
+        height: 15vh;
+    }
     footer {
-        height: 20vh;
-        padding: 0 5vw 0 5vw;
-        background-color: #333545;
+        padding: 5vh 5vw 5vh 5vw;
+        background-color: $Secondary-Color;
+        color: $Text-Color;
+        h2 {
+            font-size: 13pt;
+        }
+    }
+}
+
+@media all and (min-width: 7px) {
+    footer {
+        background-color: green;
     }
 }
