--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -1,3 +1,4 @@
+
 $Primary-Color: white;
 $Secondary-Color: rgb(50, 50, 50);
 $Text-Color: white; //#3d4252
@@ -25,6 +26,7 @@ hr:nth-of-type(2){
 
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
     background-color: white;
     font-family: sans-serif;
     header {
@@ -37,6 +39,9 @@ body {
         text-align: center;
         display: grid;
         z-index: 1;
+        a {
+            display: none;
+        }
         h1 {
             color: $Text-Color;
             font-size: 3rem;
@@ -57,7 +62,7 @@ body {
             height: 60vw;
             min-height: 400px;
         }
-
+        
         img {
             width: 35vw;
             max-width: 250px;
@@ -82,7 +87,7 @@ body {
             height: 50px;
         }
     }
-
+    
     section:nth-of-type(2) {
         div {
             height: 60vw;
@@ -96,11 +101,11 @@ body {
             width: 90%;
         }
     }
-
+    
     section:nth-of-type(3) {
         div {
             height: 60vw;
-            min-height: 300px;
+            min-height: 350px;
         }
         h2 {
             margin-top: 1rem;
@@ -111,7 +116,7 @@ body {
         }
     }
     
-
+    
     footer {
         margin-top: 5vw;
         padding: 5vw 5vw 5vw 5vw;
@@ -122,6 +127,47 @@ body {
         }
         h2 {
             font-size: 1rem;
+        }
+    }
+}
+
+@media only screen and (min-width: 750px) {
+    header {
+        display: flex !important;
+        h1 {
+            font-size: 2.5rem !important;
+        }
+        a {
+            display: block !important;
+            font-size: .5rem;
+            color: rgb(255, 211, 211);
+        }
+
+    }
+    section:first-of-type {
+        button {
+            width: 25vw !important;
+            height: 12vh !important;
+            position: relative !important;
+            left: 200px;
+        }
+    }
+
+    section:nth-of-type(3) {
+        div {
+            height: 20vw !important;
+        }
+    }
+
+    footer {
+        height: 60px !important;
+        padding: 0 !important;
+        display: flex !important;
+        h1 {
+            font-size: 1rem !important;
+        }
+        h2 {
+            font-size: .75rem !important;
         }
     }
 }
