--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -140,7 +140,7 @@ body {
         a {
             display: block !important;
             font-size: .5rem;
-            color: rgb(255, 211, 211);
+            color: white;
         }
 
     }
